#668: jetty 11 deployment